--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
     </div>
     <div id="objetivo">
-      <img src="images/final.png" alt="">
+      <img src="images/pikachu.jpg" alt="">
       <div class="texto-centrado">
 
       </div>
@@ -31,14 +31,14 @@
   </div>
   <div class="col-60">
     <div id="juego">
-      <div class="todas-las-piezas" id="pieza1"><img src="images/10.jpg" alt=""></div>
-      <div class="todas-las-piezas" id="pieza2"><img src="images/20.jpg" alt=""></div>
-      <div class="todas-las-piezas" id="pieza3"><img src="images/30.jpg" alt=""></div>
-      <div class="todas-las-piezas" id="pieza4"><img src="images/40.jpg" alt=""></div>
-      <div class="todas-las-piezas" id="pieza5"><img src="images/50.jpg" alt=""></div>
-      <div class="todas-las-piezas" id="pieza6"><img src="images/60.jpg" alt=""></div>
-      <div class="todas-las-piezas" id="pieza7"><img src="images/70.jpg" alt=""></div>
-      <div class="todas-las-piezas" id="pieza8"><img src="images/80.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza1"><img src="images/1.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza2"><img src="images/2.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza3"><img src="images/3.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza4"><img src="images/4.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza5"><img src="images/5.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza6"><img src="images/6.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza7"><img src="images/7.jpg" alt=""></div>
+      <div class="todas-las-piezas" id="pieza8"><img src="images/8.jpg" alt=""></div>
       <div class="todas-las-piezas" id="pieza9"><img src="images/pieza9.jpg" alt=""></div>
     </div>
   </div>
